--- a/sass/blocks/_promo.scss
+++ b/sass/blocks/_promo.scss
@@ -1,1 +1,50 @@
-
+.promo {
+    min-height: 650px;
+    padding-top: 21px;
+    padding-bottom: 93px;
+    background: url('../img/bg/main.jpg') center center/cover no-repeat;
+    &__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        margin-top: 90px;
+    }
+    &__header {
+        font-size: 42px;
+        font-weight: 700;
+        text-transform: uppercase;
+        color: #ffffff;
+    }
+    &__subHeader {
+        font-size: 24px;
+        font-weight: 500;
+        text-transform: uppercase;
+        color: #ffffff;
+    }
+    &__icons {
+        margin-top: 66px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        text-align: center;
+        width: 424px;
+        margin-right: 20px;
+    }
+    &__icon-text {
+        margin-top: 20px;
+    }
+    .button_main {
+        margin-top: 67px;
+    }
+    &__link {
+        margin-top: 18px;
+        font-size: 16px;
+        line-height: 1.2;
+        font-weight: 500;
+        color: #ffffff;
+        a {
+            text-decoration: underline;
+            text-transform: uppercase;
+        }
+    }
+}
