--- a/sass/media/blocks/_promo.scss
+++ b/sass/media/blocks/_promo.scss
@@ -1,48 +1,55 @@
-@media (max-width: 1200px) {}
-
-@media (max-width: 991px) {}
-
-@media (max-width: 767px) {}
-
-@media (max-width: 575px) {
-    .promo {
-        min-height: auto;
-        padding-top: 10px;
-        padding-bottom: 60px;
-        &__wrapper {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            margin-top: 40px;
-        }
-        &__header {
-            font-size: 35px;
-        }
-        &__subHeader {
-            font-size: 20px;
-        }
-        &__icons {
-            margin-right: 0;
-            margin-top: 30px;
-            width: 100%;
-        }
-        &__icon-text {
-            margin-top: 20px;
-        }
-        .button_main {
-            margin-top: 67px;
-        }
-        &__link {
-            margin-top: 18px;
-            font-size: 16px;
-            line-height: 1.2;
-            font-weight: 500;
-            color: #ffffff;
-            a {
-                text-decoration: underline;
-                text-transform: uppercase;
+    @media (max-width: 1200px) {}
+    
+    @media (max-width: 991px) {}
+    
+    @media (max-width: 767px) {
+        .promo {
+            &__wrapper {
+                padding: 0 10px;
             }
         }
     }
-}
+    
+    @media (max-width: 575px) {
+        .promo {
+            min-height: auto;
+            padding-top: 10px;
+            padding-bottom: 60px;
+            &__wrapper {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+                margin-top: 40px;
+                padding: 0 10px;
+            }
+            &__header {
+                font-size: 35px;
+            }
+            &__subHeader {
+                font-size: 20px;
+            }
+            &__icons {
+                margin-right: 0;
+                margin-top: 30px;
+                width: 100%;
+            }
+            &__icon-text {
+                margin-top: 20px;
+            }
+            .button_main {
+                margin-top: 67px;
+            }
+            &__link {
+                margin-top: 18px;
+                font-size: 16px;
+                line-height: 1.2;
+                font-weight: 500;
+                color: #ffffff;
+                a {
+                    text-decoration: underline;
+                    text-transform: uppercase;
+                }
+            }
+        }
+    }
