--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,4 +19,5 @@ a {
 @import 'blocks/promo';
 @import 'blocks/header';
 @import 'blocks/buttons';
+@import 'blocks/advantages';
 @import 'media/media.scss';
