add consultatin block and media

--- a/sass/media/media.scss
+++ b/sass/media/media.scss
@@ -1,3 +1,4 @@
 @import 'blocks/header';
 @import 'blocks/promo';
-@import 'blocks/advantages'
+@import 'blocks/advantages';
+@import 'blocks/consultation';
