--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,4 +20,7 @@ a {
 @import 'blocks/header';
 @import 'blocks/buttons';
 @import 'blocks/advantages';
-@import 'media/media.scss';
+@import 'blocks/consultation';
+@import 'blocks/titles';
+@import 'blocks/forms';
+@import 'media/media';
