--- a/sass/blocks/_titles.scss
+++ b/sass/blocks/_titles.scss
@@ -1,1 +1,8 @@
-
+.title {
+    font-size: 36px;
+    font-weight: 700;
+    text-transform: uppercase;
+    &_left {
+        text-align: left;
+    }
+}
