--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,4 +23,5 @@ a {
 @import 'blocks/consultation';
 @import 'blocks/titles';
 @import 'blocks/forms';
+@import 'blocks/carousel';
 @import 'media/media';
