--- a/sass/blocks/_titles.scss
+++ b/sass/blocks/_titles.scss
@@ -2,7 +2,10 @@
     font-size: 36px;
     font-weight: 700;
     text-transform: uppercase;
+    color: #000;
+    text-align: center;
     &_left {
         text-align: left;
+        color: #fff;
     }
 }
