--- a/sass/media/blocks/_carusel.scss
+++ b/sass/media/blocks/_carusel.scss
@@ -1,29 +1,24 @@
-@media (max-width: 1200px) {}
+@media (max-width: 1200px) {
+    .carousel {
+        .container {
+            .prev {
+                left: -30px;
+            }
+            .next {
+                right: -30px;
+            }
+        }
+    }
+}
 
 @media (max-width: 991px) {
     .carousel {
-        &__inner {
-            width: auto;
-            .slick-list {
-                img {
-                    width: 400px;
-                    margin: 0 auto;
-                }
-            }
+        button {
+            display: none;
         }
     }
 }
 
-@media (max-width: 767px) {
-    .carousel {
-        &__inner {
-            .slick-list {
-                img {
-                    width: 300px;
-                }
-            }
-        }
-    }
-}
+@media (max-width: 767px) {}
 
 @media (max-width: 575px) {}
