--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,19 +1,12 @@
 @import 'base/variables';
 * {
     font-family: 'MuseoSansCyrl', sans-serif;
-    color: #ffffff;
-}
-
-a {
-    color: #ffffff;
-    &:hover {
-        text-decoration: none;
-    }
 }
 
 .container {
     max-width: 950px;
     margin: 0 auto;
+    position: relative;
 }
 
 @import 'blocks/promo';
@@ -24,4 +17,5 @@ a {
 @import 'blocks/titles';
 @import 'blocks/forms';
 @import 'blocks/carousel';
+@import 'blocks/catalog';
 @import 'media/media';
