--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,4 +18,6 @@
 @import 'blocks/forms';
 @import 'blocks/carousel';
 @import 'blocks/catalog';
+@import 'blocks/reviews';
+@import 'blocks/footer';
 @import 'media/media';
