add modal and media

--- a/sass/blocks/_footer.scss
+++ b/sass/blocks/_footer.scss
@@ -19,6 +19,7 @@
         font-size: 20px;
         font-weight: 500;
         color: #ffffff;
+        text-align: center;
     }
     &__tel {
         margin-top: 36px;
