--- a/sass/blocks/_consultation.scss
+++ b/sass/blocks/_consultation.scss
@@ -8,4 +8,13 @@
         font-weight: 500;
         color: #ffffff;
     }
+    .error {
+        border: 1px solid $main-color;
+    }
+    label.error {
+        color: #fff;
+        border: none;
+        text-align: center;
+        margin-bottom: 10px;
+    }
 }
