--- a/sass/blocks/_pageup.scss
+++ b/sass/blocks/_pageup.scss
@@ -1,5 +1,5 @@
 .pageup {
-    display: 1;
+    display: none;
     position: fixed;
     bottom: 40px;
     right: 40px;
@@ -7,5 +7,6 @@
     height: 40px;
     img {
         width: 100%;
+        color: $main-color;
     }
 }
