--- a/sass/blocks/_footer.scss
+++ b/sass/blocks/_footer.scss
@@ -1,6 +1,13 @@
 .footer {
     position: relative;
     min-height: 630px;
+    &__map {
+        iframe {
+            width: 100%;
+            height: 630px;
+            border: none;
+        }
+    }
     &__info {
         position: absolute;
         top: 0;
